lib/nodesParser.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "nodes": parse_nodes,
        "node": parse_node,
        "attributes": parse_attributes,
        "attr": parse_attr,
        "attrToken": parse_attrToken,
        "htmlNode": parse_htmlNode,
        "htmlBlockNode": parse_htmlBlockNode,
        "htmlSingleNode": parse_htmlSingleNode,
        "htmlCommentToken": parse_htmlCommentToken,
        "voidElement": parse_voidElement,
        "handlebarsNode": parse_handlebarsNode,
        "handlebarsSingleNode": parse_handlebarsSingleNode,
        "handlebarsGenericSingle": parse_handlebarsGenericSingle,
        "handlebarsSingleComment": parse_handlebarsSingleComment,
        "handlebarsSingleCommentToken": parse_handlebarsSingleCommentToken,
        "params": parse_params,
        "param": parse_param,
        "handlebarsSafeEvaluation": parse_handlebarsSafeEvaluation,
        "handlebarsUnSafeEvaluation": parse_handlebarsUnSafeEvaluation,
        "handlebarsLookup": parse_handlebarsLookup,
        "handlebarsBlockNode": parse_handlebarsBlockNode,
        "handlebarsGenericBlock": parse_handlebarsGenericBlock,
        "handlebarsIfBlock": parse_handlebarsIfBlock,
        "handlebarsEachBlock": parse_handlebarsEachBlock,
        "handlebarsUnlessBlock": parse_handlebarsUnlessBlock,
        "handlebarsElseBlock": parse_handlebarsElseBlock,
        "textNode": parse_textNode,
        "wordWithSlash": parse_wordWithSlash,
        "lookUpWords": parse_lookUpWords,
        "params": parse_params,
        "param": parse_param,
        "paramTokenSingleQuote": parse_paramTokenSingleQuote,
        "paramTokenDoubleQuote": parse_paramTokenDoubleQuote,
        "word": parse_word,
        "ignorable": parse_ignorable,
        "space": parse_space
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "nodes";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_nodes() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_node();
        if (result0 !== null) {
          result1 = [];
          result2 = parse_ignorable();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_ignorable();
          }
          if (result1 !== null) {
            result2 = parse_nodes();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, n, ns) {
        			return [n].concat(ns);
        		})(pos0, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_node();
          if (result0 !== null) {
            result0 = (function(offset, n) {
          			return [n];
          		})(pos0, result0);
          }
          if (result0 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_node() {
        var result0;
        
        result0 = parse_htmlNode();
        if (result0 === null) {
          result0 = parse_textNode();
          if (result0 === null) {
            result0 = parse_handlebarsNode();
          }
        }
        return result0;
      }
      
      function parse_attributes() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = [];
        result1 = parse_space();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_space();
        }
        if (result0 !== null) {
          result1 = parse_attr();
          if (result1 !== null) {
            result2 = [];
            result3 = parse_space();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_space();
            }
            if (result2 !== null) {
              result3 = parse_attributes();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, s1, a, s2, as) {
        			return s1.join('') + a + s2.join('') + as;
        		})(pos0, result0[0], result0[1], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          result0 = [];
          result1 = parse_space();
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_space();
          }
          if (result0 !== null) {
            result1 = parse_attr();
            if (result1 !== null) {
              result2 = [];
              result3 = parse_space();
              while (result3 !== null) {
                result2.push(result3);
                result3 = parse_space();
              }
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, s1, a, s2) {
          			return s1.join('') + a + s2.join('');
          		})(pos0, result0[0], result0[1], result0[2]);
          }
          if (result0 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_attr() {
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        if (input.charCodeAt(pos) === 39) {
          result0 = "'";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"'\"");
          }
        }
        if (result0 !== null) {
          result1 = [];
          if (/^[^']/.test(input.charAt(pos))) {
            result2 = input.charAt(pos);
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[^']");
            }
          }
          while (result2 !== null) {
            result1.push(result2);
            if (/^[^']/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[^']");
              }
            }
          }
          if (result1 !== null) {
            if (input.charCodeAt(pos) === 39) {
              result2 = "'";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"'\"");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, a) {
        			return "'" + a.join('') + "'";
        		})(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          if (input.charCodeAt(pos) === 34) {
            result0 = "\"";
            pos++;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"\\\"\"");
            }
          }
          if (result0 !== null) {
            result1 = [];
            if (/^[^"]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[^\"]");
              }
            }
            while (result2 !== null) {
              result1.push(result2);
              if (/^[^"]/.test(input.charAt(pos))) {
                result2 = input.charAt(pos);
                pos++;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("[^\"]");
                }
              }
            }
            if (result1 !== null) {
              if (input.charCodeAt(pos) === 34) {
                result2 = "\"";
                pos++;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("\"\\\"\"");
                }
              }
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, a) {
          			return '"' + a.join('') + '"';
          		})(pos0, result0[1]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            pos2 = pos;
            reportFailures++;
            if (input.substr(pos, 2) === "/>") {
              result0 = "/>";
              pos += 2;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"/>\"");
              }
            }
            reportFailures--;
            if (result0 === null) {
              result0 = "";
            } else {
              result0 = null;
              pos = pos2;
            }
            if (result0 !== null) {
              result1 = parse_attrToken();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, a) {
            			// var aux = a;
            			return a.indexOf('/', a.length - 1) !== -1 ? a.substr(0, a.length -1) : a;
            		})(pos0, result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
          }
        }
        return result0;
      }
      
      function parse_attrToken() {
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        reportFailures++;
        if (input.substr(pos, 2) === "/>") {
          result0 = "/>";
          pos += 2;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"/>\"");
          }
        }
        reportFailures--;
        if (result0 === null) {
          result0 = "";
        } else {
          result0 = null;
          pos = pos2;
        }
        if (result0 !== null) {
          if (/^[^ '"><]/.test(input.charAt(pos))) {
            result2 = input.charAt(pos);
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[^ '\"><]");
            }
          }
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              if (/^[^ '"><]/.test(input.charAt(pos))) {
                result2 = input.charAt(pos);
                pos++;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("[^ '\"><]");
                }
              }
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, w) {
        			return w.join('');
        		})(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_htmlNode() {
        var result0;
        
        result0 = parse_htmlBlockNode();
        if (result0 === null) {
          result0 = parse_htmlSingleNode();
        }
        return result0;
      }
      
      function parse_htmlBlockNode() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15, result16;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = [];
        result1 = parse_ignorable();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignorable();
        }
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 60) {
            result1 = "<";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"<\"");
            }
          }
          if (result1 !== null) {
            pos2 = pos;
            reportFailures++;
            if (input.substr(pos, 3) === "!--") {
              result2 = "!--";
              pos += 3;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"!--\"");
              }
            }
            reportFailures--;
            if (result2 === null) {
              result2 = "";
            } else {
              result2 = null;
              pos = pos2;
            }
            if (result2 !== null) {
              pos2 = pos;
              reportFailures++;
              result3 = parse_voidElement();
              reportFailures--;
              if (result3 === null) {
                result3 = "";
              } else {
                result3 = null;
                pos = pos2;
              }
              if (result3 !== null) {
                pos2 = pos;
                reportFailures++;
                if (input.substr(pos, 5) === "input") {
                  result4 = "input";
                  pos += 5;
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"input\"");
                  }
                }
                reportFailures--;
                if (result4 === null) {
                  result4 = "";
                } else {
                  result4 = null;
                  pos = pos2;
                }
                if (result4 !== null) {
                  result5 = parse_word();
                  if (result5 !== null) {
                    result6 = parse_attributes();
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result7 = [];
                      result8 = parse_space();
                      while (result8 !== null) {
                        result7.push(result8);
                        result8 = parse_space();
                      }
                      if (result7 !== null) {
                        if (input.charCodeAt(pos) === 62) {
                          result8 = ">";
                          pos++;
                        } else {
                          result8 = null;
                          if (reportFailures === 0) {
                            matchFailed("\">\"");
                          }
                        }
                        if (result8 !== null) {
                          result9 = [];
                          result10 = parse_ignorable();
                          while (result10 !== null) {
                            result9.push(result10);
                            result10 = parse_ignorable();
                          }
                          if (result9 !== null) {
                            result10 = parse_nodes();
                            result10 = result10 !== null ? result10 : "";
                            if (result10 !== null) {
                              result11 = [];
                              result12 = parse_ignorable();
                              while (result12 !== null) {
                                result11.push(result12);
                                result12 = parse_ignorable();
                              }
                              if (result11 !== null) {
                                if (input.substr(pos, 2) === "</") {
                                  result12 = "</";
                                  pos += 2;
                                } else {
                                  result12 = null;
                                  if (reportFailures === 0) {
                                    matchFailed("\"</\"");
                                  }
                                }
                                if (result12 !== null) {
                                  result13 = parse_word();
                                  if (result13 !== null) {
                                    if (input.charCodeAt(pos) === 62) {
                                      result14 = ">";
                                      pos++;
                                    } else {
                                      result14 = null;
                                      if (reportFailures === 0) {
                                        matchFailed("\">\"");
                                      }
                                    }
                                    if (result14 !== null) {
                                      result15 = [];
                                      result16 = parse_ignorable();
                                      while (result16 !== null) {
                                        result15.push(result16);
                                        result16 = parse_ignorable();
                                      }
                                      if (result15 !== null) {
                                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15];
                                      } else {
                                        result0 = null;
                                        pos = pos1;
                                      }
                                    } else {
                                      result0 = null;
                                      pos = pos1;
                                    }
                                  } else {
                                    result0 = null;
                                    pos = pos1;
                                  }
                                } else {
                                  result0 = null;
                                  pos = pos1;
                                }
                              } else {
                                result0 = null;
                                pos = pos1;
                              }
                            } else {
                              result0 = null;
                              pos = pos1;
                            }
                          } else {
                            result0 = null;
                            pos = pos1;
                          }
                        } else {
                          result0 = null;
                          pos = pos1;
                        }
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, openTagName, attrs, ns, closeTagName) {
        			return {
        				type: 'htmlBlockNode'
        			,	openTag: openTagName
        			,	closeTag: closeTagName
        			,	attributes: attrs
        			,	children: ns || []
        			};
        		})(pos0, result0[5], result0[6], result0[10], result0[13]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_htmlSingleNode() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = [];
        result1 = parse_ignorable();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignorable();
        }
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 60) {
            result1 = "<";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"<\"");
            }
          }
          if (result1 !== null) {
            pos2 = pos;
            reportFailures++;
            if (input.substr(pos, 3) === "!--") {
              result2 = "!--";
              pos += 3;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"!--\"");
              }
            }
            reportFailures--;
            if (result2 === null) {
              result2 = "";
            } else {
              result2 = null;
              pos = pos2;
            }
            if (result2 !== null) {
              result3 = parse_voidElement();
              if (result3 !== null) {
                result4 = parse_attributes();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_space();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_space();
                  }
                  if (result5 !== null) {
                    if (input.charCodeAt(pos) === 47) {
                      result6 = "/";
                      pos++;
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"/\"");
                      }
                    }
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      if (input.charCodeAt(pos) === 62) {
                        result7 = ">";
                        pos++;
                      } else {
                        result7 = null;
                        if (reportFailures === 0) {
                          matchFailed("\">\"");
                        }
                      }
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, tagName, attrs) {
        			return {
        				type: 'htmlSingleNode'
        			,	tag: tagName
        			,	attributes: attrs
        			};
        		})(pos0, result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          result0 = [];
          result1 = parse_ignorable();
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_ignorable();
          }
          if (result0 !== null) {
            if (input.substr(pos, 6) === "<input") {
              result1 = "<input";
              pos += 6;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("\"<input\"");
              }
            }
            if (result1 !== null) {
              result2 = parse_attributes();
              result2 = result2 !== null ? result2 : "";
              if (result2 !== null) {
                if (input.substr(pos, 2) === "/>") {
                  result3 = "/>";
                  pos += 2;
                } else {
                  result3 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"/>\"");
                  }
                }
                if (result3 !== null) {
                  result0 = [result0, result1, result2, result3];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, attrs) {
          			return {
          				type: 'htmlSingleNode'
          			,	tag: 'input'
          			,	attributes: attrs
          			};
          		})(pos0, result0[2]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            result0 = [];
            result1 = parse_ignorable();
            while (result1 !== null) {
              result0.push(result1);
              result1 = parse_ignorable();
            }
            if (result0 !== null) {
              if (input.substr(pos, 6) === "<input") {
                result1 = "<input";
                pos += 6;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("\"<input\"");
                }
              }
              if (result1 !== null) {
                result2 = parse_attributes();
                result2 = result2 !== null ? result2 : "";
                if (result2 !== null) {
                  if (input.charCodeAt(pos) === 62) {
                    result3 = ">";
                    pos++;
                  } else {
                    result3 = null;
                    if (reportFailures === 0) {
                      matchFailed("\">\"");
                    }
                  }
                  if (result3 !== null) {
                    pos2 = pos;
                    result4 = [];
                    result5 = parse_ignorable();
                    while (result5 !== null) {
                      result4.push(result5);
                      result5 = parse_ignorable();
                    }
                    if (result4 !== null) {
                      result5 = parse_nodes();
                      result5 = result5 !== null ? result5 : "";
                      if (result5 !== null) {
                        result6 = [];
                        result7 = parse_ignorable();
                        while (result7 !== null) {
                          result6.push(result7);
                          result7 = parse_ignorable();
                        }
                        if (result6 !== null) {
                          if (input.substr(pos, 8) === "</input>") {
                            result7 = "</input>";
                            pos += 8;
                          } else {
                            result7 = null;
                            if (reportFailures === 0) {
                              matchFailed("\"</input>\"");
                            }
                          }
                          if (result7 !== null) {
                            result4 = [result4, result5, result6, result7];
                          } else {
                            result4 = null;
